feat: add the CandidateRepositoryTest en for the PollServiceTest comments